[package]
name = "crypto-leet-http-server-voll-cool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bytes = "1.1.0"
serde = { version = "1.0.140", features = ["derive"] }
http = "0.2.5"
num = "0.4"
